pit form now outputs to Pit class and QR code

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -19,6 +19,11 @@
                         Scout
                     </ion-label>
                 </ion-item>
+                <ion-item routerLink="/main/qr">
+                    <ion-label>
+                        QR
+                    </ion-label>
+                </ion-item>
             </ion-list>
 <!--            -->
 <!--            <ion-button routerLink="pit">-->
