--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,15 +9,27 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
-            <ion-item routerLink="main">
+            <ion-item routerLink="pit">
               <ion-label>
-                Main
+                Pit
+              </ion-label>
+            </ion-item>
+            <ion-item routerLink="scout">
+              <ion-label>
+                Scout
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-item routerLink="qr">
+            <ion-label>
+              QR Code
+            </ion-label>
+          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
+
+
