grab event data and teams for event

--- a/src/app/pit/pit.component.html
+++ b/src/app/pit/pit.component.html
@@ -7,13 +7,12 @@
     </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
     <form [formGroup]="pitForm" novalidate>
-        <ion-row >
+        <ion-row style="margin-top: 50px">
             <ion-col>
                 <ion-row justify-content-center>
-                    <ion-col size-md="5">
+                    <ion-col size-xl="5" size-lg="7" size-md="8" size-xs="10">
 
                         <ion-item-group>
                             <ion-item>
