--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,11 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="data">
+              <ion-label>
+                Data
+              </ion-label>
+            </ion-item>
             <ion-item routerLink="pit">
               <ion-label>
                 Pit
@@ -19,12 +24,12 @@
                 Scout
               </ion-label>
             </ion-item>
+            <ion-item routerLink="qr">
+              <ion-label>
+                QR Code
+              </ion-label>
+            </ion-item>
           </ion-menu-toggle>
-          <ion-item routerLink="qr">
-            <ion-label>
-              QR Code
-            </ion-label>
-          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
