--- a/src/app/scout/scout.component.html
+++ b/src/app/scout/scout.component.html
@@ -1,9 +1,23 @@
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Scout Form</ion-title>
+    </ion-toolbar>
+</ion-header>
+
+
 <ion-content>
-    <ion-header>
-        <ion-toolbar>
-            <ion-title>Scout Form</ion-title>
-        </ion-toolbar>
-    </ion-header>
+
+    <ion-row>
+        <ion-col>
+            <ion-item color="primary">
+                Unfinished
+            </ion-item>
+        </ion-col>
+    </ion-row>
+
 
     <form [formGroup]="scoutForm" novalidate>
         <ion-row justify-content-center>
