--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,11 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="login">
+              <ion-label>
+                Login
+              </ion-label>
+            </ion-item>
             <ion-item routerLink="data">
               <ion-label>
                 Data
