can get events and teams for event, store to localstorage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,11 @@
                 Login
               </ion-label>
             </ion-item>
+            <ion-item routerLink="setup">
+              <ion-label>
+                Setup
+              </ion-label>
+            </ion-item>
             <ion-item routerLink="data">
               <ion-label>
                 Data
