--- a/src/global.scss
+++ b/src/global.scss
@@ -25,5 +25,12 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-@import "assets/sass/mouse";
+@import "assets/sass/nscolors";
+@import "assets/sass/theme/light";
+@import "assets/sass/ns-material";
+@import "assets/sass/ns-card";
+@import "assets/sass/ns-ionic";
+@import "assets/sass/ns-mouse";
 @import "assets/sass/ns-modal";
+@import "assets/sass/ns-spacing";
+@import "assets/sass/ion-modal";
