--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -8,18 +8,72 @@
 </ion-header>
 
 <ion-content>
-  <ion-row justify-content-center>
-    <ion-col size-lg="6">
-      <ion-button (click)="presentEventModal()" >Select Event</ion-button>
+
+  <ion-row justify-content-center class="ns-margin-top">
+    <ion-col size-lg="6" class="ns-card-info">
+      <p>
+        First select the country of the event, then select the event itself. Event and team details will then be pulled from the TBA API and stored locally.
+      </p>
     </ion-col>
   </ion-row>
 
+  <form [formGroup]="eventForm" novalidate>
+    <ion-row justify-content-center *ngIf="eventForm !== undefined" class="ns-margin-top">
+      <ion-col size-lg="6" class="ns-card-note">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">
+              Country
+            </ion-label>
+            <ion-select formControlName="country">
+              <ion-select-option *ngFor="let c of countries" [value]="c">
+                {{c}}
+              </ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item *ngIf="eventForm.value['eventCode'] !== ''">
+            <ion-label position="floating">
+              Event
+            </ion-label>
+            <ion-input disabled formControlName="eventShortName"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-button
+                    [disabled]="eventForm.get('country').pristine"
+                    (click)="presentEventModal()" >
+              Select Event
+            </ion-button>
+          </ion-item>
+          <ion-item *ngIf="spinner" lines="none">
+            <ion-spinner></ion-spinner>
+          </ion-item>
+          <ion-item lines="none">
+            <ion-button color="success"
+                        (click)="onSubmit()"
+                        [disabled]="eventForm.invalid || submitted">
+              Set Event
+            </ion-button>
+          </ion-item>
+          <ion-item *ngIf="successMessage" color="success" lines="none">
+            <ion-label>
+              {{successMessage}}
+            </ion-label>
+          </ion-item>
+          <ion-item *ngIf="errorMessage" color="danger" lines="none">
+            <ion-label>
+              {{errorMessage}}
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </form>
 
-  <ion-row *ngIf="events.length !== 0">
-    <ion-col>
-      <pre>{{events | json}}</pre>
-    </ion-col>
-  </ion-row>
+<!--  <ion-row *ngIf="eventForm !== undefined">-->
+<!--    <ion-col>-->
+<!--      <pre>{{eventForm.value | json}}</pre>-->
+<!--    </ion-col>-->
+<!--  </ion-row>-->
 
 </ion-content>
 
